# Loxsi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  api.py  basic_auth.py  config.ini  config.yml  data_publisher.py  docker-compose.dev.yml  docker-compose.yaml  fetcher.py  main.py  models.py  pyproject.toml  queue_manager.py  requirements.txt  settings.py  websocket.py
src/: auth.py  data_publisher.py  dependecies.py  models.py  routes.py  settings.py  storeman.py  telraam.py  websocket.py
src/tasks/: fetcher.py  listener.py  task.py
static/: admin.js
templates/: admin.html
