[tool.poetry]
name = "loxsi"
version = "0.6.9"
description = "Data proxy for the Telraam application"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
Jinja2 = "^3.1.2"
PyYAML = "^6.0.1"
uvicorn = "^0.24.0.post1"
typing-extensions = "^4.8.0"
httpx = "^0.25.2"
websockets = "^12.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
