[tool.poetry]
name = "loxsi"
version = "0.2.0"
description = "Loxsi the Proxy"
authors = ["Your Name <you@example.com>"]
license = "Yes"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
pydantic = "^2.6.4"
pyyaml = "^6.0.1"
uvicorn = "^0.29.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
