[project]
name = "loxsi"
version = "0.6.9"
description = "Loxsi the Proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.1",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0.1",
]
